RESOLVED FIXED103912
setIsInTopLayer is not really a setter
https://bugs.webkit.org/show_bug.cgi?id=103912
Summary setIsInTopLayer is not really a setter
Elliott Sprehn
Reported 2012-12-03 11:44:09 PST
setIsInTopLayer is not really a setter
Attachments
Patch (4.23 KB, patch)
2012-12-03 11:48 PST, Elliott Sprehn
no flags
Patch (4.23 KB, patch)
2012-12-03 12:31 PST, Elliott Sprehn
no flags
Patch (4.24 KB, patch)
2012-12-03 13:40 PST, Elliott Sprehn
no flags
Elliott Sprehn
Comment 1 2012-12-03 11:48:38 PST
Eric Seidel (no email)
Comment 2 2012-12-03 12:24:19 PST
Comment on attachment 177298 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177298&action=review > Source/WebCore/html/HTMLDialogElement.cpp:56 > - setIsInTopLayer(false); > + document()->addToTopLayer(this); Isn't this reversed?
Elliott Sprehn
Comment 3 2012-12-03 12:26:23 PST
Comment on attachment 177298 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177298&action=review >> Source/WebCore/html/HTMLDialogElement.cpp:56 >> + document()->addToTopLayer(this); > > Isn't this reversed? Err, yes it is.
Eric Seidel (no email)
Comment 4 2012-12-03 12:28:40 PST
Should I be concerned that tests didn't catch that? (Or is it just that they hadn't run yet.)
Elliott Sprehn
Comment 5 2012-12-03 12:30:49 PST
(In reply to comment #4) > Should I be concerned that tests didn't catch that? (Or is it just that they hadn't run yet.) There's definitely dialog tests for when they display, it seems the mac port doesn't enable the build flag for dialog and the chromium bot is busted and not applying patches :/
Elliott Sprehn
Comment 6 2012-12-03 12:31:12 PST
Eric Seidel (no email)
Comment 7 2012-12-03 12:33:35 PST
Comment on attachment 177307 [details] Patch OK.
WebKit Review Bot
Comment 8 2012-12-03 12:57:59 PST
Comment on attachment 177307 [details] Patch Attachment 177307 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15106603
Elliott Sprehn
Comment 9 2012-12-03 13:40:16 PST
Elliott Sprehn
Comment 10 2012-12-03 13:40:52 PST
(In reply to comment #9) > Created an attachment (id=177316) [details] > Patch Stupid typo, setInTopLayer => setIsInTopLayer.
WebKit Review Bot
Comment 11 2012-12-03 15:31:02 PST
Comment on attachment 177316 [details] Patch Rejecting attachment 177316 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From http://git.chromium.org/external/Webkit f10c1a4..e507ad4 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at e507ad4c79d65f31547bf48bfa32467849b3b8e5 but expected f10c1a4675c348ff6c5220ad7a631f0f400f381a ! f10c1a4..e507ad4 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output: http://queues.webkit.org/results/15120536
Eric Seidel (no email)
Comment 12 2012-12-03 15:32:48 PST
Either the cq-bot's checkout is hosed, or the git.webkit.org master is confused... or both.
Dirk Pranke
Comment 13 2012-12-04 14:44:15 PST
Comment on attachment 177316 [details] Patch Clearing flags on attachment: 177316 Committed r136575: <http://trac.webkit.org/changeset/136575>
Dirk Pranke
Comment 14 2012-12-04 14:44:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.