setIsInTopLayer is not really a setter https://bugs.webkit.org/show_bug.cgi?id=103912

Patch by Elliott Sprehn <esprehn@chromium.org> on 2012-12-04
Reviewed by Eric Seidel.

Element::setInTopLayer isn't just a setter, it also adds the element
to the top layer vector in the document which changes it's display and
causes a reattach.

To make this more obvious make HTMLDialogElement use the methods on
Document and make those update the state boolean.

There also doesn't seem to be any reason for setInTopLayer
or isInTopLayer to be virtual, it appears it was a typo.

No new tests, just refactoring.

* dom/Document.cpp:
(WebCore::Document::addToTopLayer):
(WebCore::Document::removeFromTopLayer):
* dom/Element.cpp:
(WebCore::Element::setIsInTopLayer):
* dom/Element.h:
* html/HTMLDialogElement.cpp:
(WebCore::HTMLDialogElement::close):
(WebCore::HTMLDialogElement::showModal):

Canonical link: https://commits.webkit.org/122157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136575 268f45cc-cd09-0410-ab3c-d52691b4dbfc