Source/WebCore/dom/Document.cpp
@@ -5425,15 +5425,21 @@ void Document::addDocumentToFullScreenChangeEventQueue(Document* doc)
 #if ENABLE(DIALOG_ELEMENT)
 void Document::addToTopLayer(Element* element)
 {
+    if (element->isInTopLayer())
+        return;
     ASSERT(!m_topLayerElements.contains(element));
     m_topLayerElements.append(element);
+    element->setIsInTopLayer(true);
 }
 
 void Document::removeFromTopLayer(Element* element)
 {
+    if (!element->isInTopLayer())
+        return;
     size_t position = m_topLayerElements.find(element);
     ASSERT(position != notFound);
     m_topLayerElements.remove(position);
+    element->setIsInTopLayer(false);
 }
 #endif
 
