Source/WebCore/html/HTMLDialogElement.cpp
@@ -53,7 +53,7 @@ void HTMLDialogElement::close(ExceptionCode& ec)
         return;
     }
     setBooleanAttribute(openAttr, false);
-    setIsInTopLayer(false);
+    document()->removeFromTopLayer(this);
 }
 
 void HTMLDialogElement::show()
@@ -70,7 +70,7 @@ void HTMLDialogElement::showModal(ExceptionCode& ec)
         return;
     }
     setBooleanAttribute(openAttr, true);
-    setIsInTopLayer(true);
+    document()->addToTopLayer(this);
 }
 
 bool HTMLDialogElement::isPresentationAttribute(const QualifiedName& name) const
